Remove login OTP flow in sign-in
